--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "youtube-music-dl",
-	"version": "1.1.2",
+	"version": "1.2.0",
 	"description": "",
 	"type": "module",
 	"module": "index.js",
 	"scripts": {
-		"test": "node test.ts"
+		"test": "node test.js"
 	},
 	"keywords": [
 		"youtube",
